RESOLVED FIXED77220
Fix overridePreference for WebKitHixie76WebSocketProtocolEnabled in WebKitTestRunner.
https://bugs.webkit.org/show_bug.cgi?id=77220
Summary Fix overridePreference for WebKitHixie76WebSocketProtocolEnabled in WebKitTes...
Jocelyn Turcotte
Reported 2012-01-27 07:57:59 PST
Fix overridePreference for WebKitHixie76WebSocketProtocolEnabled in WebKitTestRunner.
Attachments
Patch (1.78 KB, patch)
2012-01-27 07:59 PST, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2012-01-27 07:59:21 PST
Caio Marcelo de Oliveira Filho
Comment 2 2012-01-27 08:30:28 PST
LGTM.
WebKit Review Bot
Comment 3 2012-01-27 09:51:38 PST
Comment on attachment 124318 [details] Patch Clearing flags on attachment: 124318 Committed r106125: <http://trac.webkit.org/changeset/106125>
WebKit Review Bot
Comment 4 2012-01-27 09:51:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.