Fix overridePreference for WebKitHixie76WebSocketProtocolEnabled in WebKitTestRunner. https://bugs.webkit.org/show_bug.cgi?id=77220

Reviewed by Noam Rosenthal.

* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner): The macro already stringify TestRunnerName.


Canonical link: https://commits.webkit.org/94103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106125 268f45cc-cd09-0410-ab3c-d52691b4dbfc